<resources>
    <string name="app_name">Kayuringin Sehat</string>
    <string name="copyright">©kayuringinsehat</string>
    <string name="sekibeing">MUHANMMAD AJI SAPUTRA</string>
    <string name="jipan">PANJI FERYADI</string>
    <string name="masuk">Masuk</string>
    <string name="keluar">Keluar</string>
    <string name="daftar">Daftar</string>
    <string name="sudahpunyakun">Sudah Punya Akun?</string>
    <string name="belumpunyakun">Belum Punya Akun?</string>
    <string name="kirim">Kirim</string>
    <string name="warning_masukkan_email">Masukkan Alamat Email atau Nomor Telepon untuk menerima kata sandi baru melalui kotak masuk Email atau SMS Anda.</string>
    <string name="atur_sandi">Atur Ulang Kata Sandi</string>
    <string name="kata_sandi_baru_dikirim">Kata Sandi baru dikirim ke Email/SMS Anda. Silakan Periksa Kotak Masuk!</string>
    <string name="masuk_user">Telepon/Email/NIK/No.BPJS</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="ulang_kata_sandi">Ulangi Kata Sandi</string>
    <string name="nik">NIK / Nomor KTP</string>
    <string name="telepon">Telepon/Email</string>
    <string name="bpjs">No.BPJS</string>

    <string name="nomor_bpjs">nomor BPJS</string>
    <string name="last_check">last check: dd/mm/yyyy</string>
    <string name="tensi">TENSI DARAH</string>
    <string name="tensi_darah">000/00</string>
    <string name="riwayat">RIWAYAT SAKIT</string>
    <string name="riwayat_sakit">NOT NULL</string>
    <string name="gol_darah">GOL. DARAH</string>
    <string name="golongan_darah">NOT NULL</string>

    <string name="gizi">Kalkulator Gizi Anak</string>
    <string name="bmi">Kalkulator Indeks Masa Tubuh</string>
    <string name="mens">Kalkulator Menstruasi</string>
    <string name="web_bpjs">Website Official BPJS</string>

    <string name="tahukah_kamu">Tahukah Kamu?</string>

    <string name="hari_pertama">Hari Pertama Haid (dd-m-yyyy)</string>
    <string name="lama_siklus">Lama Siklus Haid (Rata-Rata)</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="usia_anak">Usia Anak</string>
    <string name="aktivitas">AKTIVITAS HARIAN</string>

    <string name="menu_layanan">LAYANAN</string>
    <string name="menu_faskes">DAFTAR FASKES</string>
    <string name="menu_darurat">DARURAT</string>
    <string name="menu_tanya">TANYA</string>
    <string name="menu_akun">ATUR AKUN</string>

    <string name="hitung">HITUNG</string>
    <string name="rumah_sakit">RUMAH SAKIT</string>
    <string name="puskesmas">PUSKESMAS</string>
    <string name="klinik">KLINIK</string>
    <string name="faskes_tersedia">Faskes Tersedia</string>
    <string name="list_faskes">List Faskes</string>
    <string name="daftar_poli">Daftar Poli</string>
    <string name="poli_umum">POLI UMUM</string>
    <string name="poli_gigi">POLI GIGI</string>
    <string name="nomor_antrean">Nomor Antrean</string>

    <string name="nama_faskes">Nama Faskes</string>
    <string name="poli">Poli</string>
    <string name="poli_tersedia">Poli Tersedia</string>
    <string name="jam_operasi">Jam Operasional</string>
    <string name="nomor_antrean_anda">Nomor Antrean Anda</string>

    <string name="tanya_faskes">Tanya Faskes</string>

    <string name="tentang_app">Tentang Aplikasi</string>
    <string name="simpan">Simpan</string>

    <string name="kecelakaaan">KECELAKAAN</string>
    <string name="melahirkan">MELAHIRKAN</string>
    <string name="ambulan">AMBULAN SEGERA HADIR</string>

    <string name="pesan">Silakan Masukan Pesan</string>

    <string name="mens_info">Masa Subur Anda</string>
    <string name="ovulasi">Perkiraan Ovulasi</string>
    <string name="subur">Perkiraan Masa Subur</string>
    <string name="siklus">Menstruasi Tiap Bulan</string>

    <string name="teks_bmi"><b>Indeks Massa Tubuh</b> adalah ukuran yang digunakan untuk mengetahui status gizi seseorang yang didapatkan dari <b>perbandingan berat dan tinggi badan</b>. Perhitungan IMT adalah dengan membagi berat badan (dalam kilogram) dengan tinggi badan (dalam meter kuadrat).</string>
    <string name="teks_mens"><b>Kalkulator Menstruasi</b> adalah perhitungan untuk menentukan kapan kemungkinan terjadinya ovulasi. Mengetahui masa subur penting bagi perempuan dan pasangan karena dapat meningkatkan peluang pembuahan jika dilakukan dengan efektif.</string>
    <string name="teks_gizi"><b>Menurut FAO &amp; WHO</b> Gizi anak adalah hal yang penting untuk pertumbuhan dan perkembangan anak. Anak-anak memerlukan asupan gizi berdasarkan jumlah kalori yang dibutuhkan untuk tumbuh &amp; berkembang secara optimal untuk mencegah Stunting, Wasting, dan Obesitas.</string>

    <string name="keterangan_reeGIZI"><b>Kebutuhan Energi Basal</b>: Jumlah energi yang dibutuhkan oleh tubuh untuk menjalankan fungsi-fungsinya secara normal tanpa aktivitas.</string>
    <string name="keterangan_totalGIZI"><b>Kebutuhan Energi Total</b>: Kebutuhan Energi Basal ditambah aktivitas yang dilakukan.</string>

    <string name="nilai_basal">Kebutuhan Energi Basal: <b>%s kkal/hari</b></string>
    <string name="nilai_total">Kebutuhan Energi Total: <b>%s kkal/hari</b></string>

    <string name="pilih_usia">Pilih Usia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_faskes_tersedia2">FaskesTersedia2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>