<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AturAkun_TentangAppActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_kembali"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:backgroundTint="@color/biruMENU"
        android:drawable="@drawable/kembali"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginStart="22dp">

        <ImageView
            android:id="@+id/iv_kembaliBack"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:src="@drawable/kembaliback" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ly_kayuringinsehat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_kembali">

        <ImageView
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/plusjakarta"
            android:shadowColor="@color/abuCARDVIEW"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="2"
            android:text="@string/app_name"
            android:textColor="@color/biruMENU"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_kayuringinsehat">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/plusjakarta"
            android:shadowColor="@color/abuCARDVIEW"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="2"
            android:text="Developer"
            android:textColor="@color/biruMENU"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/plusjakarta"
            android:shadowColor="@color/abuCARDVIEW"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="2"
            android:text="@string/sekibeing"
            android:textColor="@color/biruMENU"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/plusjakarta"
            android:shadowColor="@color/abuCARDVIEW"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="2"
            android:text="@string/jipan"
            android:textColor="@color/biruMENU"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>